fixed alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ a {
 img {
     display: block;
     margin: 0 auto;
+    padding-left: 5px;
 }
 
 #header {
@@ -130,13 +131,14 @@ span.answer {
 
 ul.links {
   list-style-type: none;
-  display:inline;
-  margin-right:4px;
+  display: inline;
+  margin-right: 4px;
   white-space: nowrap;
 }
 
 ul.links li{
-  display:inline;
-  font-size:35px;
-  padding: 7px;
+  display: inline;
+  font-size: 35px;
+  padding-left: 9px;
+  padding-right: 7px;
 }
